force-app/main/default/objects/Project_Services__c/Project_Services__c.object-meta.xml
<CustomObject>
    <label>Project Services</label>
    <nameField>
        <label>Project Services Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>