force-app/main/default/objects/Project_Services__c/fields/Active_Service__c.field-meta.xml
<CustomField>
    <fullName>Active_Service__c</fullName>
    <formula>IF(Service_End_Date__c&gt;= TODAY() , True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Service</label>
    <type>Checkbox</type>
</CustomField>