force-app/main/default/objects/Project_Services__c/fields/Additional_Hrs_rate_OH__c.field-meta.xml
<CustomField>
    <fullName>Additional_Hrs_rate_OH__c</fullName>
    <label>Additional Hrs. rate  (OH)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>