force-app/main/default/objects/Project_Services__c/fields/Additional_TOT_Hours_Block__c.field-meta.xml
<CustomField>
    <fullName>Additional_TOT_Hours_Block__c</fullName>
    <label>Additional TOT Hours Block</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>