force-app/main/default/objects/Project_Services__c/fields/Day_Rate_OOH__c.field-meta.xml
<CustomField>
    <fullName>Day_Rate_OOH__c</fullName>
    <label>Day Rate (OOH)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>