force-app/main/default/objects/Project_Services__c/fields/Half_Day_OOH__c.field-meta.xml
<CustomField>
    <fullName>Half_Day_OOH__c</fullName>
    <label>Half Day (OOH)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>