force-app/main/default/objects/Project_Services__c/fields/Minimum_Hours_T_M__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Hours_T_M__c</fullName>
    <label>Minimum Hours (T &amp; M)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>