force-app/main/default/objects/Project_Services__c/fields/Minimum_Ticket_Commitment__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Ticket_Commitment__c</fullName>
    <label>Minimum Ticket Commitment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>