force-app/main/default/objects/Project_Services__c/fields/No_of_Devices__c.field-meta.xml
<CustomField>
    <fullName>No_of_Devices__c</fullName>
    <label>No of Devices</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>