force-app/main/default/objects/Project_Services__c/fields/P2_Response_SLA__c.field-meta.xml
<CustomField>
    <fullName>P2_Response_SLA__c</fullName>
    <label>P2 Response SLA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SLA</valueSetName>
    </valueSet>
</CustomField>