force-app/main/default/objects/Project_Services__c/fields/P2_Ticket_Rate__c.field-meta.xml
<CustomField>
    <fullName>P2_Ticket_Rate__c</fullName>
    <label>P2 Ticket Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>