force-app/main/default/objects/Project_Services__c/fields/P3_Resolution_SLA__c.field-meta.xml
<CustomField>
    <fullName>P3_Resolution_SLA__c</fullName>
    <label>P3 Resolution SLA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SLA</valueSetName>
    </valueSet>
</CustomField>