force-app/main/default/objects/Project_Services__c/fields/P3_Ticket_Rate__c.field-meta.xml
<CustomField>
    <fullName>P3_Ticket_Rate__c</fullName>
    <label>P3 Ticket Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>