force-app/main/default/objects/Project_Services__c/fields/Per_Device_Rate__c.field-meta.xml
<CustomField>
    <fullName>Per_Device_Rate__c</fullName>
    <label>Per Device Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>