force-app/main/default/objects/Project_Services__c/fields/PH_Full_Day__c.field-meta.xml
<CustomField>
    <fullName>PH_Full_Day__c</fullName>
    <label>PH Full Day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>