force-app/main/default/objects/Project_Services__c/fields/Product_Number__c.field-meta.xml
<CustomField>
    <fullName>Product_Number__c</fullName>
    <label>Product Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>