force-app/main/default/objects/Project_Services__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Projects Services</relationshipLabel>
    <relationshipName>Projects_Services</relationshipName>
    <type>Lookup</type>
</CustomField>