force-app/main/default/objects/Project_Services__c/fields/Project_Site__c.field-meta.xml
<CustomField>
    <fullName>Project_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Site</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Project__c</field>
            <operation>equals</operation>
            <valueField>Project_Sites__c.Project__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Project_Sites__c</referenceTo>
    <relationshipLabel>Projects Services</relationshipLabel>
    <relationshipName>Projects_Services</relationshipName>
    <type>Lookup</type>
</CustomField>