force-app/main/default/objects/Project_Services__c/fields/Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order__c</fullName>
    <description>Client Purchase Order, This is look up to custom Sales Order object.</description>
    <label>Customer Purchase Order</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Project__c</field>
            <operation>equals</operation>
            <valueField>Order__c.Project__c</valueField>
        </filterItems>
        <filterItems>
            <field>Order__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Sales Order</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Order__c</referenceTo>
    <relationshipLabel>Projects Services</relationshipLabel>
    <relationshipName>Projects_Services</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>