force-app/main/default/objects/Project_Services__c/fields/Service_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_End_Date__c</fullName>
    <label>Service End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>