force-app/main/default/objects/Project_Services__c/fields/Skill_Level__c.field-meta.xml
<CustomField>
    <fullName>Skill_Level__c</fullName>
    <label>Skill Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>L0</fullName>
            </value>
            <value>
                <fullName>L0.5</fullName>
            </value>
            <value>
                <fullName>L1</fullName>
            </value>
            <value>
                <fullName>L1.5</fullName>
            </value>
            <value>
                <fullName>L2</fullName>
            </value>
            <value>
                <fullName>L3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>