force-app/main/default/objects/Project_Services__c/fields/Sourced_By__c.field-meta.xml
<CustomField>
    <fullName>Sourced_By__c</fullName>
    <label>Sourced By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TotalIT</fullName>
                <default>true</default>
                <label>TotalIT</label>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>