force-app/main/default/objects/Project_Services__c/fields/T_M_Rate_in_hrs__c.field-meta.xml
<CustomField>
    <fullName>T_M_Rate_in_hrs__c</fullName>
    <label>T &amp; M Rate (in hrs)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>