force-app/main/default/objects/Project_Services__c/fields/Time_on_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Time_on_Ticket__c</fullName>
    <label>Time on Ticket (TOT) in hrs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>