force-app/main/default/objects/Project_Services__c/fields/Vendor_Additional_Hrs_rate_OOH__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Additional_Hrs_rate_OOH__c</fullName>
    <label>Vendor Additional Hrs. rate (OOH)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>