force-app/main/default/objects/Project_Services__c/fields/Vendor_Additional_TOT_Hours_Block__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Additional_TOT_Hours_Block__c</fullName>
    <label>Vendor Additional TOT Hours Block</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>