force-app/main/default/objects/Project_Services__c/fields/Vendor_Day_Rate__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Day_Rate__c</fullName>
    <label>Vendor Day Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>