force-app/main/default/objects/Project_Services__c/fields/Vendor_Day_Rate_OOH__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Day_Rate_OOH__c</fullName>
    <label>Vendor Day Rate (OOH)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>