force-app/main/default/objects/Project_Services__c/fields/Vendor_Half_Day_OOH__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Half_Day_OOH__c</fullName>
    <label>Vendor Half Day (OOH)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>