force-app/main/default/objects/Project_Services__c/fields/Vendor_Minimum_Hours_T_M__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Minimum_Hours_T_M__c</fullName>
    <label>Vendor Minimum Hours (T &amp; M)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>