force-app/main/default/objects/Project_Services__c/fields/Vendor_Minimum_Ticket_Commitment__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Minimum_Ticket_Commitment__c</fullName>
    <label>Vendor Minimum Ticket Commitment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>