force-app/main/default/objects/Project_Services__c/fields/Vendor_PH_Full_Day__c.field-meta.xml
<CustomField>
    <fullName>Vendor_PH_Full_Day__c</fullName>
    <label>Vendor PH Full Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>