force-app/main/default/objects/Project_Services__c/fields/Vendor_PH_Hourly__c.field-meta.xml
<CustomField>
    <fullName>Vendor_PH_Hourly__c</fullName>
    <label>Vendor PH Hourly</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>