force-app/main/default/objects/Project_Services__c/fields/Vendor_Product_Cost__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Product_Cost__c</fullName>
    <label>Vendor Product Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>