force-app/main/default/objects/Project_Services__c/fields/Vendor_Project__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Project__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Vendor Project</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Project__c.Customer__c</field>
            <operation>equals</operation>
            <valueField>$Source.Vendor__c</valueField>
        </filterItems>
        <filterItems>
            <field>Project__c.Customer_Project__c</field>
            <operation>equals</operation>
            <valueField>$Source.Project__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Vendor Services</relationshipLabel>
    <relationshipName>Vendor_Project</relationshipName>
    <type>Lookup</type>
</CustomField>