force-app/main/default/objects/Project_Services__c/fields/Vendor_Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Purchase_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor Purchase Order</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Order__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Purchase Order</value>
        </filterItems>
        <filterItems>
            <field>$Source.Project__c</field>
            <operation>equals</operation>
            <valueField>Order__c.Project__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Order__c</referenceTo>
    <relationshipLabel>Projects Services (Vendor Purchase Order)</relationshipLabel>
    <relationshipName>Projects_Services1</relationshipName>
    <type>Lookup</type>
</CustomField>