force-app/main/default/objects/Project_Services__c/fields/Vendor_Standby_Fees__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Standby_Fees__c</fullName>
    <label>Vendor Standby Fees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>