force-app/main/default/objects/Project_Services__c/fields/Vendor_T_M_Rate_in_hrs__c.field-meta.xml
<CustomField>
    <fullName>Vendor_T_M_Rate_in_hrs__c</fullName>
    <label>Vendor T &amp; M Rate (in hrs)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>