force-app/main/default/objects/Project_Services__c/fields/Vendor_Time_on_Ticket_TOT_in_hrs__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Time_on_Ticket_TOT_in_hrs__c</fullName>
    <label>Vendor Time on Ticket (TOT) in hrs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>