force-app/main/default/objects/Project_Services__c/fields/Vendor_Weekend_Half_Day__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Weekend_Half_Day__c</fullName>
    <label>Vendor Weekend Half Day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>