force-app/main/default/objects/Project_Services__c/fields/Vendor_Weekend_Hourly__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Weekend_Hourly__c</fullName>
    <label>Vendor Weekend Hourly</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>