force-app/main/default/objects/Project_Services__c/fields/Vendor_Weekend_PH_Rates__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Weekend_PH_Rates__c</fullName>
    <label>Vendor Weekend &amp; PH Rates</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>