force-app/main/default/objects/Project_Services__c/fields/Weekend_Half_Day__c.field-meta.xml
<CustomField>
    <fullName>Weekend_Half_Day__c</fullName>
    <label>Weekend Half Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>