force-app/main/default/objects/Project_Services__c/fields/Weekend_Hourly__c.field-meta.xml
<CustomField>
    <fullName>Weekend_Hourly__c</fullName>
    <label>Weekend Hourly</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>