force-app/main/default/objects/Project_Services__c/recordTypes/Dispatch.recordType-meta.xml
<RecordType>
    <fullName>Dispatch</fullName>
    <active>true</active>
    <label>Dispatch</label>
</RecordType>