force-app/main/default/objects/Project_Services__c/recordTypes/FTE.recordType-meta.xml
<RecordType>
    <fullName>FTE</fullName>
    <active>true</active>
    <label>FTE</label>
</RecordType>