force-app/main/default/objects/Project_Services__c/recordTypes/Hardware.recordType-meta.xml
<RecordType>
    <fullName>Hardware</fullName>
    <active>false</active>
    <label>Hardware</label>
</RecordType>