force-app/main/default/objects/Project_Services__c/recordTypes/Schedule_Visit.recordType-meta.xml
<RecordType>
    <fullName>Schedule_Visit</fullName>
    <active>true</active>
    <label>Schedule Visit</label>
</RecordType>