force-app/main/default/objects/Project_Services__c/validationRules/AdditionalHrsrateOHshouldbegreaterthan0.validationRule-meta.xml
<ValidationRule>
    <fullName>AdditionalHrsrateOHshouldbegreaterthan0</fullName>
    <active>true</active>
    <description>Additional Hrs. rate (OH) should be greater than zero</description>
    <errorConditionFormula>Additional_Hrs_rate_OH__c &lt;=0</errorConditionFormula>
    <errorDisplayField>Additional_Hrs_rate_OH__c</errorDisplayField>
    <errorMessage>Additional Hrs. rate (OH) should be greater than zero</errorMessage>
</ValidationRule>