force-app/main/default/objects/Project_Services__c/validationRules/AdditionalHrsrateOOHshouldbegreaterthan0.validationRule-meta.xml
<ValidationRule>
    <fullName>AdditionalHrsrateOOHshouldbegreaterthan0</fullName>
    <active>true</active>
    <description>Additional Hrs. rate (OOH) should be greater than zero</description>
    <errorConditionFormula>Additional_Hrs_rate_OOH__c &lt;=0</errorConditionFormula>
    <errorDisplayField>Additional_Hrs_rate_OOH__c</errorDisplayField>
    <errorMessage>Additional Hrs. rate (OOH) should be greater than zero</errorMessage>
</ValidationRule>