force-app/main/default/objects/Project_Services__c/validationRules/Day_Rate_OOH_should_be_greater_than_0.validationRule-meta.xml
<ValidationRule>
    <fullName>Day_Rate_OOH_should_be_greater_than_0</fullName>
    <active>true</active>
    <description>Day Rate (OOH) should be greater than zero</description>
    <errorConditionFormula>Day_Rate_OOH__c &lt;=0</errorConditionFormula>
    <errorDisplayField>Day_Rate_OOH__c</errorDisplayField>
    <errorMessage>Day Rate (OOH) should be greater than zero</errorMessage>
</ValidationRule>