force-app/main/default/objects/Project_Services__c/validationRules/Day_Rate_should_be_greater_than_zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Day_Rate_should_be_greater_than_zero</fullName>
    <active>true</active>
    <description>Day Rate should be greater than zero</description>
    <errorConditionFormula>Day_Rate__c &lt;=0</errorConditionFormula>
    <errorDisplayField>Day_Rate__c</errorDisplayField>
    <errorMessage>Day Rate should be greater than zero</errorMessage>
</ValidationRule>