force-app/main/default/objects/Project_Services__c/validationRules/Half_Day_OOH_should_be_greater_than_zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Half_Day_OOH_should_be_greater_than_zero</fullName>
    <active>true</active>
    <description>Half Day (OOH) should be greater than zero</description>
    <errorConditionFormula>Half_Day_OOH__c &lt;=0</errorConditionFormula>
    <errorDisplayField>Half_Day_OOH__c</errorDisplayField>
    <errorMessage>Half Day (OOH) should be greater than zero</errorMessage>
</ValidationRule>