force-app/main/default/objects/Project_Services__c/validationRules/Monthly_Rate_should_be_greater_than_zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Monthly_Rate_should_be_greater_than_zero</fullName>
    <active>true</active>
    <description>Monthly_Rate_should be greater than zero</description>
    <errorConditionFormula>Monthly_Rate__c &lt;=0</errorConditionFormula>
    <errorDisplayField>Monthly_Rate__c</errorDisplayField>
    <errorMessage>Monthly Rate should be greater than zero</errorMessage>
</ValidationRule>