force-app/main/default/objects/Project_Services__c/validationRules/OT_Rate_should_be_greater_than_zero.validationRule-meta.xml
<ValidationRule>
    <fullName>OT_Rate_should_be_greater_than_zero</fullName>
    <active>true</active>
    <description>OT Rate should be greater than zero</description>
    <errorConditionFormula>OT_Rate__c &lt;=0</errorConditionFormula>
    <errorDisplayField>OT_Rate__c</errorDisplayField>
    <errorMessage>OT Rate should be greater than zero</errorMessage>
</ValidationRule>