force-app/main/default/objects/Project_Services__c/validationRules/P5_Ticket_Rate_should_be_greater_than_0.validationRule-meta.xml
<ValidationRule>
    <fullName>P5_Ticket_Rate_should_be_greater_than_0</fullName>
    <active>true</active>
    <description>P5 Ticket Rate should be greater than zero</description>
    <errorConditionFormula>P5_Ticket_Rate__c &lt;=0</errorConditionFormula>
    <errorDisplayField>P5_Ticket_Rate__c</errorDisplayField>
    <errorMessage>P5 Ticket Rate should be greater than zero</errorMessage>
</ValidationRule>